--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
           <a href="https://www.instagram.com/primeiralinharv/">Instagram</a>
         </li>
 
+	<li>
+          <a href="https://gabiarcasi.github.io/PrimeiraLinha/">Nosso Site</a>
+        </li>
+
         <li>
           <a href="https://maps.app.goo.gl/u3ajVopAhrrvYrvJ6" target="_blank">Localização</a>
         </li>
